--- a/package.json
+++ b/package.json
@@ -27,33 +27,34 @@
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^2.11.0",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@azure/cosmos": "^4.0.0",
 		"@azure/cosmos-language-service": "^0.0.5",
-		"bits-ui": "^0.19.5",
+		"bits-ui": "^0.19.7",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.13",
 		"date-fns": "^3.3.1",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.44.23",
 		"formsnap": "^0.4.4",
+		"jszip": "^3.10.1",
 		"lucide-svelte": "^0.331.0",
 		"mode-watcher": "^0.2.1",
 		"monaco-editor": "^0.46.0",
 		"paneforge": "^0.0.2",
 		"sql-parser": "^0.5.0",
 		"svelte-sonner": "^0.3.17",
-		"sveltekit-superforms": "^1.13.4",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.2.0",
 		"tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
-		"uuid": "^9.0.1",
-		"zod": "^3.22.4"
+		"uuid": "^9.0.1"
 	}
 }
