--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
 serde_json = "1.0"
+zip = "0.6.6"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.6.0", features = [ "dialog-open", "fs-create-dir", "path-all", "os-all", "fs-remove-file", "fs-read-dir", "fs-read-file", "fs-write-file", "fs-exists"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
