--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
 		"date-fns": "^3.3.1",
 		"flowbite": "^2.3.0",
 		"flowbite-svelte": "^0.44.23",
-		"formsnap": "^0.4.4",
 		"jszip": "^3.10.1",
 		"lucide-svelte": "^0.331.0",
 		"mode-watcher": "^0.2.1",
 		"monaco-editor": "^0.46.0",
+		"monaco-sql-languages": "^0.12.0-beta.10",
 		"paneforge": "^0.0.2",
 		"sql-parser": "^0.5.0",
 		"svelte-sonner": "^0.3.17",
